css changes for spacing issue

--- a/src/route/CartPage/CartPage.style.scss
+++ b/src/route/CartPage/CartPage.style.scss
@@ -875,7 +875,6 @@
     display: flex;
     justify-content: left;
     align-items: center;
-    margin: 10px 0;
     &-ExploreButton {
       color: #000000;
       display: flex;
